--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <img
-      src="/Star-Moss-Moth.png"
+      src="Star-Moss-Moth.png"
       alt="Moth sitting on moss under a starry sky."
     />
     <p>Oh looky a picture on the left.</p>
