--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Star With T</title>
+    <title>Star With Text</title>
     <style>
       img {
         width: 200px;
